fix: lineage menu item overflow

--- a/openmetadata-ui/src/main/resources/ui/src/components/EntityLineage/entityLineage.style.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/EntityLineage/entityLineage.style.less
@@ -153,10 +153,6 @@
 
 .suggestion-node-item {
   position: absolute;
-  right: -10px;
-  width: 230px;
-}
-
-.text-wrap-break-word {
-  word-break: break-all;
+  left: -10px;
+  min-width: 230px;
 }
